--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Component for booking appointments. Designed for Lean Mind.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -r ts-node/register src/test/*.spec.ts"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -17,16 +17,11 @@
   },
   "homepage": "https://github.com/alaniscrln/bookingCalendarJS#readme",
   "devDependencies": {
-    "@types/chai": "^4.2.16",
     "@types/jest": "^26.0.22",
-    "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.37",
-    "@types/supertest": "^2.0.11",
-    "chai": "^4.3.4",
     "jest": "^26.6.3",
-    "mocha": "^8.3.2",
+    "jest-cli": "^26.6.3",
     "nodemon": "^2.0.7",
-    "supertest": "^6.1.3",
     "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
