--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Component for booking appointments. Designed for Lean Mind.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest src/test/*"
   },
   "repository": {
     "type": "git",
