--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Component for booking appointments. Designed for Lean Mind.",
   "main": "index.js",
   "scripts": {
-    "test": "jest src/test/*"
+    "test": "jest src/test/*",
+    "build": "webpack --config webpack.config.js",
+    "dev": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -19,12 +21,16 @@
   "devDependencies": {
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
+    "express": "^4.17.1",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.5.5",
+    "ts-loader": "^9.1.0",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "webpack": "^5.35.0",
+    "webpack-cli": "^4.6.0"
   }
 }
