--- a/package.json
+++ b/package.json
@@ -21,16 +21,23 @@
   "devDependencies": {
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
+    "css-loader": "^5.2.4",
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
+    "mini-css-extract-plugin": "^1.5.0",
+    "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "ts-jest": "^26.5.5",
     "ts-loader": "^9.1.0",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.4",
     "webpack": "^5.35.0",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "autoprefixer": "^9.0.0",
+    "cssnano": "^4.0.5"
   }
 }
