--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "typescript": "^4.2.4",
     "webpack": "^5.35.0",
     "webpack-cli": "^4.6.0"
+  },
+  "dependencies": {
+    "@googleapis/docs": "^0.2.0",
+    "googleapis": "^72.0.0"
   }
 }
