--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^9.0.0",
     "css-loader": "^5.2.4",
     "cssnano": "^4.0.5",
+    "dotenv-webpack": "^7.0.2",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
@@ -44,7 +45,6 @@
   "dependencies": {
     "@googleapis/docs": "^0.2.0",
     "@types/gapi": "0.0.39",
-    "gapi": "0.0.3",
-    "googleapis": "^72.0.0"
+    "gapi": "0.0.3"
   }
 }
