--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/countries-and-timezones": "^2.0.3",
     "@types/gapi": "0.0.39",
     "countries-and-timezones": "^2.4.0",
-    "gapi": "0.0.3"
+    "gapi": "0.0.3",
+    "moment-timezone": "^0.5.33"
   }
 }
